{
  "version": 4,
  "terraform_version": "1.15.7",
  "serial": 12,
  "lineage": "c673a26c-e58c-0193-bb44-76ab3e9bd31e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-01a00762f46d584a1",
            "arn": "arn:aws:ec2:ap-south-1:556791123713:instance/i-02d4bf7347c401bf0",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02d4bf7347c401bf0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "Project_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-01294caacea50b908"
              }
            ],
            "primary_network_interface_id": "eni-01294caacea50b908",
            "private_dns": "ip-10-0-1-143.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.143",
            "public_dns": "ec2-13-233-94-22.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.233.94.22",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c84e8a2e548f3f95",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01dfe04b4256f420b",
            "tags": {
              "Name": "devops-project-server"
            },
            "tags_all": {
              "Name": "devops-project-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01e671018e7db6322"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "556791123713",
            "id": "i-02d4bf7347c401bf0",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.ec2_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.devops_project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "project-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:556791123713:internet-gateway/igw-061f9f344c808b00a",
            "id": "igw-061f9f344c808b00a",
            "owner_id": "556791123713",
            "region": "ap-south-1",
            "tags": {
              "Name": "project-igw"
            },
            "tags_all": {
              "Name": "project-igw"
            },
            "vpc_id": "vpc-0df33076b989134ef"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "556791123713",
            "id": "igw-061f9f344c808b00a",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.devops_project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:556791123713:route-table/rtb-08fe871470a1cb763",
            "id": "rtb-08fe871470a1cb763",
            "owner_id": "556791123713",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-061f9f344c808b00a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "project-public-rt"
            },
            "tags_all": {
              "Name": "project-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0df33076b989134ef"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "556791123713",
            "id": "rtb-08fe871470a1cb763",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.project-igw",
            "aws_vpc.devops_project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rt-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-010c5d0a9c5900b72",
            "region": "ap-south-1",
            "route_table_id": "rtb-08fe871470a1cb763",
            "subnet_id": "subnet-01dfe04b4256f420b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "556791123713",
            "id": "rtbassoc-010c5d0a9c5900b72",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.project-igw",
            "aws_route_table.public-rt",
            "aws_subnet.public_subnet",
            "aws_vpc.devops_project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:556791123713:security-group/sg-01e671018e7db6322",
            "description": "Allow SSH and HTTP traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01e671018e7db6322",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_ssh_and_web",
            "name_prefix": "",
            "owner_id": "556791123713",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "project-ec2-sg"
            },
            "tags_all": {
              "Name": "project-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0df33076b989134ef"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "556791123713",
            "id": "sg-01e671018e7db6322",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.devops_project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:556791123713:subnet/subnet-0531f3c52fc7e2ec3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0531f3c52fc7e2ec3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "556791123713",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "devops_project_private_subnet"
            },
            "tags_all": {
              "Name": "devops_project_private_subnet"
            },
            "vpc_id": "vpc-0df33076b989134ef"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "556791123713",
            "id": "subnet-0531f3c52fc7e2ec3",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.devops_project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:556791123713:subnet/subnet-01dfe04b4256f420b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01dfe04b4256f420b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "556791123713",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "devops_project_subnet"
            },
            "tags_all": {
              "Name": "devops_project_subnet"
            },
            "vpc_id": "vpc-0df33076b989134ef"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "556791123713",
            "id": "subnet-01dfe04b4256f420b",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.devops_project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "devops_project_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:556791123713:vpc/vpc-0df33076b989134ef",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0332fc172984b9aa6",
            "default_route_table_id": "rtb-059ba49900e4e567f",
            "default_security_group_id": "sg-05db7fe09c1f06567",
            "dhcp_options_id": "dopt-0369bf19454979dea",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0df33076b989134ef",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-059ba49900e4e567f",
            "owner_id": "556791123713",
            "region": "ap-south-1",
            "tags": {
              "Name": "devops_project_vpc"
            },
            "tags_all": {
              "Name": "devops_project_vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "556791123713",
            "id": "vpc-0df33076b989134ef",
            "region": "ap-south-1"
          }
        }
      ]
    }
  ]
}